# netbox-discovery-agent-policies

./: .gitignore  README.md  device-discovery.yaml  device.yaml  example-commands.md  git.yaml  mist-discovery.yaml  network-discovery.yaml  network.yaml  selector.yaml  worker-discovery.yaml  workers.txt
configs/: device-discovery.yaml  mist-discovery.yaml  network-discovery.yaml  worker-discovery.yaml
policies/: device-discovery-policy.yaml  device-discovery.yaml  mist-discovery-policy.yaml  mist-worker-policy.yaml  network-discovery.yaml  worker-discovery-policy.yaml
worker-example/: .gitignore  README.md  pyproject.toml  requirements.txt
worker-example/worker_example/: __init__.py  runner.py
